# accommodation-buddy

./: .env.example  .gitignore  ACCOMMODATION_BUDDY_BUILD_PLAN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md
scripts/: entrypoint.sh  pull_models.sh  quantize_ocr.sh  worker_entrypoint.sh
src/accommodation_buddy/: cli.py  config.py  main.py
src/accommodation_buddy/api/: deps.py
src/accommodation_buddy/api/routes/: assessment.py  auth.py  classes.py  documents.py  features.py  settings.py  students.py
src/accommodation_buddy/core/: base_plugin.py  feature_manager.py  panel_host.py  prompts.py  registry.py
src/accommodation_buddy/db/: models.py  session.py
src/accommodation_buddy/db/migrations/: env.py
src/accommodation_buddy/plugins/: __init__.py  cognates.py  frontloaded_vocab.py  glossary.py  instruction_explainer.py  language_assessment.py  new_language_dialogue.py  ocr.py  pause_teacher.py  sentence_frames.py  teacher_strategy.py  translation.py
src/accommodation_buddy/services/: document_parser.py  model_settings.py  ollama_client.py  pdf_export.py
src/accommodation_buddy/static/css/: document_view.css  style.css
src/accommodation_buddy/tasks/: celery_app.py  plugin_tasks.py
src/accommodation_buddy/templates/: assessment_chat.html  base.html  class_detail.html  classes.html  dashboard.html  document_view.html  documents.html  export_pdf.html  export_pdf_inline.html  feature_manager.html  login.html  register.html  settings.html  student_list.html
(+14 files in other folders)
